--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 centered">
-            <h1>Karibu kwa Twende.<br/>Sign up now</h1>
+            <!-- <h1>Karibu kwa Twende.<br/>Sign up now</h1> -->
             <div class="mtb">
               <form role="form" action="register.php" method="post" enctype="plain"> 
-                <input type="email" name="email" class="subscribe-input" placeholder="Enter your e-mail address..." required>
-                <button class='btn btn-conf btn-green' type="submit">Sart your free trial</button>
+                <!-- <input type="email" name="email" class="subscribe-input" placeholder="Enter your e-mail address..." required> -->
+               <!-- </h2><button class='btn btn-conf btn-green' type="submit">Sart your free trial</button> -->
               </form>
             </div><!--/mt-->
-            <h6>Drivers go through a different process.</h6>
+            <h6></h6>
           </div>
         </div><!--/row-->
       </div><!--/container-->
@@ -56,10 +56,10 @@
     <div class="container ptb">
       <div class="row">
         <div class="col-md-6">
-          <h2>All the features you want in this kind of apps you'll got it here.</h2>
-          <p class="mt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          <h2>Twende is available now! </h2>
+          <p class="mt">Twende is the easiest way to order a Boda Boda and get around securely in Nairobi. Download Twende for free on the Google Play Store.</p>
           <p class="store">
-            <a href="#"><img src="assets/img/app-store.png" height="50" alt=""></a>
+            <!-- <a href="#"><img src="assets/img/app-store.png" height="50" alt=""></a> -->
             <a href="#"><img src="assets/img/google-play.png" height="50" alt=""></a>
           </p>
         </div>
@@ -73,15 +73,16 @@
       <div class="container">
         <div class="row centered">
           <div class="col-md-8 col-md-offset-2">
-            <h1>Join your experiences with the people you care more. Let us help you.</h1>
-            <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</h4>
+            <h1>Twende makes travelling easy, reliable and secure.</h1>
+            <h4>Choose your favourite Boda Boda driver. Indicate your Pick Up Location. Pay either cashless or do pay with cash. </h4>
             <p><button class="btn btn-conf-2 btn-green">Learn More</button></p>
+            
           </div><!--/col-md-8-->
         </div>
       </div>
     </div><!--/sep-->
 
-    <div class="container ptb">
+    <!-- <div class="container ptb">
       <div class="row centered">
         <h2 class="mb">Our Pricing Model<br/>It's Quite Easy To Understand.</h2>
         <div class="col-md-4">
@@ -104,9 +105,9 @@
                 <button class="btn btn-conf-2 btn-green">Subscribe Now</button>
               </div><!--/p-body-->
           </div><!--/price-table-->
-        </div><!--/col-md-4-->
+        </div><!--/col-md-4--> -->
 
-         <div class="col-md-4">
+         <!-- <div class="col-md-4">
           <div class="price-table">
               <div class="p-head">
                 Business
@@ -126,9 +127,9 @@
                 <button class="btn btn-conf-2 btn-green">Subscribe Now</button>
               </div><!--/p-body-->
           </div><!--/price-table-->
-        </div><!--/col-md-4-->
+        </div><!--/col-md-4--> -->
 
-         <div class="col-md-4">
+         <!-- <div class="col-md-4">
           <div class="price-table">
               <div class="p-head">
                 Corporate
@@ -150,7 +151,8 @@
           </div><!--/price-table-->
         </div><!--/col-md-4-->
       </div><!--/row-->
-    </div><!--/container-->
+    </div><!--/container--> 
+
 
     <div id="g">
       <div class="container">
@@ -158,7 +160,7 @@
           <div class="col-sm-2 col-sm-offset-1">
             <img src="assets/img/client1.png" alt="">
           </div>
-          <div class="col-sm-2">
+          <!-- <div class="col-sm-2">
             <img src="assets/img/client3.png" alt="">
           </div>
           <div class="col-sm-2">
@@ -169,7 +171,7 @@
           </div>
           <div class="col-sm-2">
             <img src="assets/img/client5.png" alt="">
-          </div>
+          </div> -->
         </div><!--/row-->
       </div>
     </div><!--/g-->
@@ -182,17 +184,17 @@
               <!-- Wrapper for slides -->
               <div class="carousel-inner">
                 <div class="item active">
-                  <h3>I enjoyed so much the last edition of Twende, that I bought the tickets for the new one edition of the event the first day.</h3>
-                  <h5><tgr>DAVID JHONSON</tgr></h5>
+                  <h3>Twende allows me to get around much easier. The app helps you to see your favourite drivers in one screen and they come right to your pick up location!</h3>
+                  <h5><tgr>David Green</tgr></h5>
                 </div>
                 <div class="item">
-                  <h3>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</h3>
-                  <h5><tgr>MARK LAWRENCE</tgr></h5>
-                </div>
+                  <h3>Twende helps us to get more clients and grow our micro business. It is more trustworthy for clients to select a driver through Twende, but it is also easier for us to get trustworthy clients.</h3>
+                  <h5><tgr>George -a boda boda driver </tgr></h5>
+                <!-- </div>
                 <div class="item">
                   <h3>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration, by injected humour.</h3>
                   <h5><tgr>LISA SMITH</tgr></h5>
-                </div>
+                </div> -->
               </div>
             </div><!--/Carousel-->
 
